# magic_args

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  magic_args-config.cmake  test.cpp  vcpkg.json
.github/workflows/: build-all.yml  build-single.yml  website.yaml
cmake/: MagicArgs.cmake  magic_args-config.cmake
docs/: Gemfile  _config.yml  getting-started.md  index.md  setup.md
docs/changes/: index.md  v0.4.md
docs/features/: encoding.md  index.md  multi-call.md  normalization.md  subcommands.md
examples/: CMakeLists.txt  everything.cpp  invocable-subcommands.cpp  minimal-powershell-style.cpp  minimal-with-encoding.cpp  minimal.cpp  multicall-powershell-style.cpp  multicall.cpp  subcommands.cpp  windows.cpp  winmain.cpp
include/magic_args/: CMakeLists.txt  argument_definitions.hpp  dump.hpp  enum.hpp  gnu_style_parsing_traits.hpp  iconv.hpp  incomplete_parse_reason.hpp  magic_args.hpp  main_macros.hpp  parse.hpp  parse_silent.hpp  powershell_style_parsing_traits.hpp  program_info.hpp  subcommands.hpp  value_wrapper_t.hpp  verbatim_names.hpp  windows.hpp
include/magic_args/detail/: concepts.hpp  config.hpp  constexpr_strings.hpp  definition_tags.hpp  encoding.hpp  from_string.hpp  get_argument_definition.hpp  overloaded.hpp  parse.hpp  parsing_traits_for_args.hpp  print.hpp  print_incomplete_parse_reason.hpp  reflection.hpp  single_header_prefix.hpp  static_assert_not_an_enum.hpp  to_formattable.hpp  unique_any.hpp  usage.hpp  validation.hpp  visitors.hpp  win32_api.hpp
include/magic_args/subcommands/: declarations.hpp  inspection.hpp  invocable_declarations.hpp  invoke_subcommands.hpp  invoke_subcommands_silent.hpp  is_error.hpp  parse_subcommands.hpp  parse_subcommands_silent.hpp  print_incomplete_command_parse_reason.hpp
magic_args/: CMakeLists.txt  argument_definitions.hpp  dump.hpp  enum.hpp  extra_help.hpp  gnu_style_parsing_traits.hpp  incomplete_parse_reason.hpp  magic_args-reflection.hpp  magic_args.hpp  parse.hpp  powershell_style_parsing_traits.hpp  print.hpp  subcommands.hpp  value_wrapper_t.hpp  verbatim_names.hpp  windows.hpp
magic_args/detail/: concepts.hpp  from_string.hpp  get_argument_definition.hpp  overloaded.hpp  parse.hpp  print.hpp  print_incomplete_parse_reason.hpp  reflection.hpp  to_formattable.hpp  usage.hpp  validation.hpp
magic_args/subcommands/: declarations.hpp  invocable_declarations.hpp  invoke_subcommands.hpp  invoke_subcommands_silent.hpp  is_error.hpp  parse_subcommands.hpp  parse_subcommands_silent.hpp  print_incomplete_command_parse_reason.hpp
tests/: CMakeLists.txt  arg-type-definitions.hpp  chomp.hpp  output-posix.cpp  output-windows.cpp  output-windows.hpp  output.cpp  output.hpp  subcommand-definitions.hpp  test-constexpr_strings.cpp  test-core.cpp  test-counted_flag.cpp  test-default-values.cpp  test-demangling.cpp  test-dump.cpp  test-encoding.cpp  test-enumerate-subcommands.cmake  test-enums.cpp  test-help.cpp  test-inspect-subcommands.cmake  test-invoke_subcommands.cpp  test-invoke_subcommands_silent.cpp  test-multicall.cpp  test-parse_subcommands.cpp  test-parse_subcommands_silent.cpp  test-std-optional.cpp  test-styles.cpp  test-subcommand_names.cpp  test-windows.cpp  test.cpp
utilities/: CMakeLists.txt  enumerate-subcommands.cpp  enumerate-subcommands_arguments.hpp  enumerate-subcommands_create_links.hpp  enumerate-subcommands_dlfcn.hpp  enumerate-subcommands_win32.hpp  list-subcommands.cpp  list-subcommands_dlfcn.hpp  list-subcommands_elf.hpp
